<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_title_bg"
    android:layout_width="match_parent"
    android:layout_height="@dimen/title_bar_height"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:id="@+id/iv_break"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:padding="10dp"
        android:src="@mipmap/back"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_title_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_pay_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:text="@string/pay_list"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_tui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/tv_pay_list"
        android:text="@string/tui_k"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="invisible" />
</RelativeLayout>