<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:Android="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--下面的背景-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/illustration"
        android:layout_alignParentBottom="true"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <ImageView
                android:id="@+id/id_backgroud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/pic29"
                android:layout_alignParentTop="true"
                android:scaleType="fitXY"
                android:layout_alignParentStart="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/x210_login"
                android:scaleType="centerCrop"
                android:src="@mipmap/icon" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/id_toolbar"
                android:layout_width="match_parent"
                android:layout_height="48dp"

                android:fitsSystemWindows="true"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                >
                <ImageView
                    android:id="@+id/id_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/return2"
                    android:paddingRight="@dimen/x55"
                    />

                <TextView
                    android:id="@+id/id_title_toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="用户登录"
                    android:textSize="@dimen/app_text_content"
                    android:textColor="@color/main_backgroud"
                    android:layout_gravity="center"

                    />

            </android.support.v7.widget.Toolbar>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/yuan_white_shape"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"

            >

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:textColorHint="@color/x9_login"
                android:background="@null"
                android:drawableLeft="@mipmap/phone"
                android:drawablePadding="5dp"
                android:hint="@string/input_phone"
                android:inputType="phone"
                android:textColor="#000"
                android:textSize="@dimen/app_text_content" />

        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:gravity="clip_vertical"
            android:orientation="horizontal"
            android:background="@drawable/yuan_white_shape"
            >

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@mipmap/numbers"
                android:drawablePadding="5dp"
                android:hint="@string/input_password"
                android:inputType="number"
                android:textColor="#000"
                android:textColorHint="@color/x9_login"
                android:textSize="@dimen/app_text_content" />

            <TextView
                android:id="@+id/bt_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@drawable/bn_text"
                android:padding="10dp"
                android:text="@string/get_code"
                android:textColor="@drawable/box_text_color"
                android:textSize="@dimen/app_text_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:visibility="gone"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="使用须同意"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/user_xy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="用户协议"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_login"
            style="@style/button_style"
            android:textColor="@color/white"
            android:text="@string/start" />


    </LinearLayout>














</RelativeLayout>
